# storage/api-docs/api-docs.json
@@ -377,6 +377,46 @@
                     }
                 }
             }
+        },
+        "/api/v1/review/delete/{id}": {
+            "delete": {
+                "tags": [
+                    "Review"
+                ],
+                "summary": "Delete existing review",
+                "description": "Deletes a record and returns no content",
+                "operationId": "deleteReview",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Review id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
         }
     },
     "security": [
